--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -6,6 +6,21 @@
 		<header th:insert="layouts/header">
 		<h2 th:text="${titulo}"></h2>
 		
+		<div class="container">
+			
+			<form>
+			  <div class="row mb-3">
+			    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+			    <div class="col-sm-10">
+			      <input type="email" class="form-control" id="inputEmail3">
+			    </div>
+			  </div>
+			  <button type="submit" class="btn btn-primary">Sign in</button>
+			</form>
+			
+			
+		</div>
+		
 		
 	</body>
 	
