--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -1,44 +1,52 @@
 <html xmlns:th="http://www.thymeleaf.org">
-	<head th:insert="layouts/head">
-	</head>
-	
-	<body>
-		<header th:insert="layouts/header">
-		</header>
-		
-		<div class="container">
-			
-			<form action="@{/pelicula}" th:object="${pelicula}"  method="post" class="col-md-8 offset-md-2">
-				<h2 th:text="${titulo}" class="py-4"></h2>
-				<div class="row mb-3">
-					<label for="inputEmail3" class="col-sm-2 col-form-label">Nombre</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="nombre" th:field="*{nombre}">
-					</div>
+
+<head th:insert="layouts/head">
+</head>
+
+<body>
+	<header th:insert="layouts/header">
+	</header>
+
+	<div class="container">
+
+		<form action="@{/pelicula}" th:object="${pelicula}" method="post" class="col-md-8 offset-md-2">
+			<h2 th:text="${titulo}" class="py-4"></h2>
+			<div class="row mb-3">
+				<label for="inputEmail3" class="col-sm-2 col-form-label">Nombre</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="nombre" th:field="*{nombre}">
 				</div>
-				<div class="row mb-3">
-					<label for="inputEmail3" class="col-sm-2 col-form-label">Fecha de estreno</label>
-					<div class="col-sm-10">
-						<input type="date" class="form-control" id="fecha_estreno" th:field="*{fechaEstreno}">
-					</div>
+			</div>
+			<div class="row mb-3">
+				<label for="inputEmail3" class="col-sm-2 col-form-label">Fecha de estreno</label>
+				<div class="col-sm-10">
+					<input type="date" class="form-control" id="fecha_estreno" th:field="*{fechaEstreno}">
 				</div>
-				<div class="row mb-3">
-					<label for="inputEmail3" class="col-sm-2 col-form-label">Genero</label>
-					<div class="col-sm-10">
-						<select class="form-select" th:field="*{genero}">
-							<option th:each="genero : ${genero}" th:text="${genero.nombre}" th:value="${genero.id}"></option>
-							
-						</select>
-					</div>
+			</div>
+			<div class="row mb-3">
+				<label for="inputEmail3" class="col-sm-2 col-form-label">Actor</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="Actor" th:field="*{actor}">
 				</div>
-				<button type="submit" class="btn btn-primary floant-end">Sign in</button>
-			</form>
-			
-			
-		</div>
-		
-		
-	</body>
-	
+			</div>
+			<div class="row mb-3">
+				<label for="inputEmail3" class="col-sm-2 col-form-label">Genero</label>
+				<div class="col-sm-10">
+					<select class="form-select" th:field="*{genero}">
+						<option th:each="genero : ${genero}" th:text="${genero.nombre}" th:value="${genero.id}">
+						</option>
+
+					</select>
+				</div>
+			</div>
+			<button type="submit" class="btn btn-primary floant-end">Sign in</button>
+		</form>
+
+
+	</div>
+
+
+</body>
+
 
 </html>
