--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -23,17 +23,17 @@
 					<input type="date" class="form-control" id="fecha_estreno" th:field="*{fechaEstreno}">
 				</div>
 			</div>
-			<div class="row mb-3">
+			<!-- <div class="row mb-3">
 				<label for="inputEmail3" class="col-sm-2 col-form-label">Actor</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="Actor" th:field="*{actor}">
 				</div>
-			</div>
+			</div> -->
 			<div class="row mb-3">
 				<label for="inputEmail3" class="col-sm-2 col-form-label">Genero</label>
 				<div class="col-sm-10">
 					<select class="form-select" th:field="*{genero}">
-						<option th:each="genero : ${genero}" th:text="${genero.nombre}" th:value="${genero.id}">
+						<option th:each="genero : ${generos}" th:text="${genero.nombre}" th:value="${genero.id}">
 						</option>
 
 					</select>
