--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -9,7 +9,8 @@
 
 	<div class="container">
 
-		<form action="@{/pelicula}" th:object="${pelicula}" method="post" class="col-md-8 offset-md-2">
+		<form th:action="@{/pelicula}" th:object="${pelicula}" method="post" class="col-md-8 offset-md-2">
+
 			<h2 th:text="${titulo}" class="py-4"></h2>
 			<div class="row mb-3">
 				<label for="inputEmail3" class="col-sm-2 col-form-label">Nombre</label>
@@ -39,7 +40,7 @@
 					</select>
 				</div>
 			</div>
-			<button type="submit" class="btn btn-primary floant-end">Sign in</button>
+			<button type="submit" class="btn btn-primary flont-end">Sign in</button>
 		</form>
 
 
