--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,18 +1,15 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head th:insert="layouts/head">
-	</head>
-	
-	<body>
-		<header th:insert="layouts/header">
-		</header>
-		<h2 th:text="${titulo}"></h2>
-		
-		<div class="container">
-			<h2>HOME PAGE</h2>
-		</div>
-		
-		
-	</body>
-	
+	<head th:insert="~{layouts/head :: head}"></head>
 
+
+    <body>
+        <header th:insert="~{layouts/header :: header}"></header>
+
+        <h2 th:text="${titulo}"></h2>
+
+        <div class="container">
+            <h2>HOME PAGE</h2>
+        </div>
+    </body>
 </html>
