--- a/src/main/resources/templates/layouts/head.html
+++ b/src/main/resources/templates/layouts/head.html
@@ -1,10 +1,16 @@
-<head>
+<head th:fragment="head">
 	<title>App</title>
 	<meta charset="UTF-8">
 	
 	<!-- CDN BootStrap CSS & .JS-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 	
-	<!-- CDN bOOTSTRAP  -->>
+	<!-- CDN bOOTSTRAP  -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+	
+	<!--CDN Script JQuery 3.0-->
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	
+	<!--CDN Scripts.js-->
+	<script src="/js/scripts.js"></script>
 </head>
