--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -1,15 +1,23 @@
-<header>
+<header th:fragment="header">
 	<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
 	  <div class="container-fluid">
 	    <a class="navbar-brand" href="#">App</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
-	    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	      <div class="navbar-nav">
-	        <a class="nav-link active" aria-current="page" href="#">Home</a>
-	        <a class="nav-link" href="#">Peliculas</a>
-	      </div>
+	    <div class="collapse navbar-collapse" id="navbarNav">
+	      <ul class="navbar-nav">
+	        <li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="/home">Catalogo</a>
+			</li>
+			<li>
+				<a class="nav-link" href="/pelicula">Nueva Pelicula</a>
+			</li>
+			<li>
+				<a class="nav-link" href="/listado">Administrar</a>
+			</li>
+			
+	      </ul>
 	    </div>
 	  </div>
 	</nav>
