--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -16,12 +16,14 @@
 				<label for="inputEmail3" class="col-sm-2 col-form-label">Nombre</label>
 				<div class="col-sm-10">
 					<input type="text" class="form-control" id="nombre" th:field="*{nombre}">
+					<div class="invalid-feed" th:if="${#fields.hashError('nombre')}" th:errors="*{nombre}"></div>
 				</div>
 			</div>
 			<div class="row mb-3">
 				<label for="inputEmail3" class="col-sm-2 col-form-label">Fecha de estreno</label>
 				<div class="col-sm-10">
 					<input type="date" class="form-control" id="fecha_estreno" th:field="*{fechaEstreno}">
+					<div class="invalid-feed" th:if="${#fields.hashError('fechaEstreno')}" th:errors="*{fechaEstreno}"></div>
 				</div>
 			</div>
 			<div class="row mb-3">
@@ -31,6 +33,7 @@
 						<option th:each="genero : ${generos}" th:text="${genero.nombre}" th:value="${genero.id}">
 						</option>
 					</select>
+					<div class="invalid-feed" th:if="${#fields.hashError('genero')}" th:errors="*{genero}"></div>
 				</div>
 			</div>
 			<div class="row mb-3">
