[ADD] - Alert in home.html & view cards to pelicula

--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -21,4 +21,10 @@
 	    </div>
 	  </div>
 	</nav>
+	<div th:if="${msj != null}" 
+	     th:text="${msj}" 
+	     th:class="|alert ${tipoMsj != null ? 'alert-' + tipoMsj : ''}|">
+	</div>
+
+
 </header>
