--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,28 @@
         <h2 th:text="${titulo}"></h2>
 
         <div class="container">
-            <h2>HOME PAGE</h2>
+			<div class="row row-cols-1 row-cols-md-3 g-4">
+			  <div class="col" th:each="pelicula : ${peliculas}">
+			    <div class="card">
+			      <img src="..." class="card-img-top" alt="...">
+			      <div class="card-body">
+			        <h5 class="card-title" th:text="${pelicula.nombre}">Card title</h5>
+			        <p class="card-text" th:text="${pelicula.genero}"></p>
+					<div class="catalogo-actor-container" th:each="protagonista : ${protagonistas}">
+						<div class="catalogo-actor-imagen" th:text="${protagonista.urlImagen}">
+							
+							
+						</div>
+						<div class="catalogo-actor-texto" th:text="${protagonista.nombre}">
+							
+							
+						</div>
+						
+					</div>
+			      </div>
+			    </div>
+			  </div>
+			</div>
         </div>
     </body>
 </html>
