--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -9,7 +9,7 @@
 
 	<div class="container">
 
-		<form th:action="@{/pelicula}" th:object="${pelicula}" method="post" class="col-md-8 offset-md-2">
+		<form th:action="@{/pelicula}" th:object="${pelicula}" method="post" class="col-md-8 offset-md-2" enctype="multipart/form-data" >
 
 			<h2 th:text="${titulo}" class="py-4"></h2>
 			<div class="row mb-3">
@@ -66,6 +66,17 @@
 					</select>
 				</div>
 			</div>
+			
+			<div class="row mb-3">
+							<label for="imagen" class="col-sm-2 col-form-label">Archivo</label>
+							<div class="col-sm-10">
+									<input type="file" id="imagen" name="imagen">
+									<!-- div image previewer on selection -->
+									<div>
+										
+									</div>
+							</div>
+						</div>
 			
 			<input id="ids" name="ids" type="hidden">
 			
