--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -70,9 +70,9 @@
 			<div class="row mb-3">
 							<label for="imagen" class="col-sm-2 col-form-label">Archivo</label>
 							<div class="col-sm-10">
-									<input type="file" id="imagen" name="imagen">
+									<input type="file" id="imagen" name="imagen" onchange="previsualizador()">
 									<!-- div image previewer on selection -->
-									<div>
+									<div id="vista_previa" class="d-none">
 										
 									</div>
 							</div>
