[UPDATE] - Updated Movie Controller by adding data to File Service to save each movie's image, updating movie.html for rendering it

--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -70,7 +70,7 @@
 			<div class="row mb-3">
 							<label for="imagen" class="col-sm-2 col-form-label">Archivo</label>
 							<div class="col-sm-10">
-									<input type="file" id="imagen" name="imagen" onchange="previsualizador()">
+									<input type="file" id="archivo" name="archivo" onchange="previsualizador()">
 									<!-- div image previewer on selection -->
 									<div id="vista_previa" class="d-none">
 										
