--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 			<div class="row row-cols-1 row-cols-md-3 g-4">
 			  <div class="col" th:each="pelicula : ${peliculas}">
 			    <div class="card">
-			      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpMj9739FdqLR-ooOwg9qoQdP2vbiJd4JVRw&s" class="card-img-top" alt="foto">
+			      <img th:src="@{${'/archivo?n='} + ${pelicula.imagen == null ? '_default.jpg' : pelicula-imagen}}" class="card-img-top" alt="foto">
 			      <div class="card-body">
 			        <h5 class="card-title" th:text="${pelicula.nombre}">Card title</h5>
 			        <p class="card-text" th:text="${pelicula.genero}"></p>
