[ADD] - listado.html & modified path to css in head.html

--- a/src/main/resources/templates/layouts/head.html
+++ b/src/main/resources/templates/layouts/head.html
@@ -14,5 +14,5 @@
 	<!--CDN Scripts.js-->
 	<script src="/js/scripts.js"></script>
 	
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
