[Update] - pelicula.html & listado.html modified peliculaController add to endPoint /listado

--- a/src/main/resources/templates/layouts/listado.html
+++ b/src/main/resources/templates/layouts/listado.html
@@ -7,6 +7,24 @@
         <header th:insert="~{layouts/header :: header}"></header>
 		
         <div class="container">
+			<table class="table">
+			  <thead>
+			    <tr>
+			      <th scope="col">Nombre</th>
+			      <th scope="col">Genero</th>
+			      <th scope="col">Acciones</th>
+			    </tr>
+			  </thead>
+			  <tbody class="table-group-divider">
+			    <tr th:each="pelicula : ${peliculas}">
+			      <th th:text="${pelicula.nombre}"></th>
+			      <td th:text="${pelicula.genero.nombre}">Mark</td>
+			      <td>
+					<a th:href="@{'/pelicula/' + ${pelicula.id}}">Editar</a>
+				  </td>
+			    </tr>
+			  </tbody>
+			</table>
 			
         </div>
 		
