--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -78,8 +78,9 @@
 							</div>
 						</div>
 			
-			<input id="ids" name="ids" type="hidden">
-			
+			<input id="ids" name="ids" type="text">
+			<input id="id" name="id" type="text" th:field="*{id}">
+			<input id="imagen" name="imagen" type="text" th:field="*{imagen}">
 			<div id="protagonistas_container" class="row"></div>
 			
 			<button type="submit" class="btn btn-primary flont-end">Sign in</button>
