--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,12 +12,15 @@
 			<div class="row row-cols-1 row-cols-md-3 g-4">
 			  <div class="col" th:each="pelicula : ${peliculas}">
 			    <div class="card">
-			      <img th:src="@{${'/archivo?n='} + ${pelicula.imagen == null ? '_default.jpg' : pelicula-imagen}}" class="card-img-top" alt="foto">
+					<img th:if="${pelicula.imagen != null}" th:src="@{'/archivo?n=' + ${pelicula.imagen}}" class="card-img-top" alt="foto">
+					<img th:if="${pelicula.imagen == null}" th:src="@{'/archivo?n=_default.jpg'}" class="card-img-top" alt="foto">
+
+
 			      <div class="card-body">
 			        <h5 class="card-title" th:text="${pelicula.nombre}">Card title</h5>
 			        <p class="card-text" th:text="${pelicula.genero}"></p>
 					<div class="catalogo-actor-container" th:each="protagonista : ${pelicula.protagonista}">
-						<div class="catalogo-actor-imagen" th:style="|background-image:url(' ${protagonista.urlImagen}')|">
+						<div class="catalogo-actor-imagen" th:style="|background-image:url('${protagonista.urlImagen}')|">
 							
 							
 						</div>
