--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -70,17 +70,18 @@
 			<div class="row mb-3">
 							<label for="imagen" class="col-sm-2 col-form-label">Archivo</label>
 							<div class="col-sm-10">
-									<input type="file" id="archivo" name="archivo" onchange="previsualizador()">
-									<!-- div image previewer on selection -->
+								<!-- div image previewer on selection -->
 									<div id="vista_previa" class="d-none">
-										
+																		
 									</div>
+									<input type="file" id="archivo" name="archivo" onchange="previsualizador()">
+									
 							</div>
 						</div>
 			
-			<input id="ids" name="ids" type="text">
-			<input id="id" name="id" type="text" th:field="*{id}">
-			<input id="imagen" name="imagen" type="text" th:field="*{imagen}">
+			<input id="ids" name="ids" type="hidden">
+			<input id="id" name="id" type="hidden" th:field="*{id}">
+			<input id="imagen" name="imagen" type="hidden" th:field="*{imagen}">
 			<div id="protagonistas_container" class="row"></div>
 			
 			<button type="submit" class="btn btn-primary flont-end">Sign in</button>
